--- a/sandbox/basic/styles.css
+++ b/sandbox/basic/styles.css
@@ -9,14 +9,22 @@ body{
     background-color:#333;
     color:#f1f1f1;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    position: relative;
 
 }
 header{
 
 background-color: #222;
-    padding:1.5rem;
+    padding:0.5rem;
     text-align:center;
     font-size: 1.5rem;
+    display:flex;
+    justify-content: space-between;
+    height:100px;
+    align-items: center;
+    position:fixed;
+    width: 100%;
+    z-index: 1;
 
 }
 
@@ -28,4 +36,104 @@ background-color: #222;
 
  header h1{
     color:#E0A75E;
+    color:#c97e4d;
+    margin:auto;
  }
+
+ .chaiColor{
+    color:#c97e4d;
+ }
+ img{
+    max-width: 100%;
+    height:auto;
+ }
+.logo img{
+    max-width: 100px;
+}
+main{
+    display:grid;
+    position: relative;
+    grid-template-columns:  3fr;
+    height:calc(100vh - 100px);
+    padding-top:100px;
+
+
+
+}
+ul li{
+    list-style:none;
+    padding:0.8rem;
+}
+a{
+    text-decoration:none;
+    color:inherit;
+}
+
+aside{
+    padding:1.5rem;
+    border-right:rgba(255,255,255,0.2) 0.4px solid;
+    position:fixed;
+    height:100%;
+    overflow:auto;
+    z-index: 1;
+    /* background-color: #222; */
+    background-color: #333;
+    width:200px;
+}
+.cards{
+    padding-left:200px;
+}
+.cards-container{
+    padding:1.5rem;
+    padding-top:0;
+    display:grid;
+    grid-template-columns: repeat(auto-fill, 250px);
+    gap:3rem;
+    /* background-color: #333; */
+}
+.cards h2{
+    padding:1.5rem;
+    margin:1rem 0;
+}
+
+.card{
+    padding:1.5rem;
+    /* margin:1.5rem; */
+    border:1px solid #f1f1f177;
+
+    background-color: #222;
+    border-radius:0.4rem;
+    /* box-shadow: 0 0 0.5rem rgba(255,255,255,0.2); */
+    overflow:auto;
+    max-height: 100%;
+    height: 100%;
+    width: 280px;
+    line-height:1.5;
+}
+.card h3{
+    margin-bottom:0.5rem;
+    font-size:1.2rem;
+    margin-top:1rem;
+    margin-bottom:1rem;
+    width: 100%;
+    font-weight:500;
+
+}
+.card-header-info{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.video-count{
+    font-size:1.5rem;
+    display:flex;
+    align-items:center;
+    justify-content: space-between;
+    width:100%;
+
+}
+.video-count small{
+    margin-right:1rem;
+    color:#f1f1f199;
+    font-size:0.9rem;
+}
