--- a/sandbox/basic/styles.css
+++ b/sandbox/basic/styles.css
@@ -15,8 +15,8 @@ body{
 header{
 
 background-color: #222;
-    padding:0.5rem;
-    text-align:center;
+
+    /* text-align:center; */
     font-size: 1.5rem;
     display:flex;
     justify-content: space-between;
@@ -25,8 +25,14 @@ background-color: #222;
     position:fixed;
     width: 100%;
     z-index: 1;
+    /* flex-wrap: wrap; */
+    padding:0.5rem 1.6rem;
 
 }
+/* .container{
+    max-width:1200px;
+    margin:auto;
+} */
 
  header h1 span{
     font-weight:500;
@@ -50,6 +56,17 @@ background-color: #222;
 .logo img{
     max-width: 100px;
 }
+
+header p {
+    /* flex-basis:100%; */
+    font-size:0.8rem;
+}
+.full-video-link{
+    transition: all 0.3s ease;
+}
+.full-video-link:hover{
+    color:#f1f1f1;
+}
 main{
     display:grid;
     position: relative;
@@ -67,6 +84,20 @@ ul li{
 a{
     text-decoration:none;
     color:inherit;
+}
+aside ul li a{
+    color:#f1f1f1;
+    transition: all 0.1s ease;
+}
+aside ul li a:hover{
+    border-bottom: #c97e4d 2px solid;
+
+}
+.active{
+    /* border-bottom: #c97e4d 2px solid; */
+    background-color:#6664;
+    border-radius:8px;
+
 }
 
 aside{
@@ -109,6 +140,22 @@ aside{
     height: 100%;
     width: 280px;
     line-height:1.5;
+    transition: all 0.3s ease;
+}
+.card:hover{
+    box-shadow: 0 0 0.5rem rgba(255,255,255,0.2);
+    border:1px solid #c97e4d;
+}
+
+.video-count .fa-arrow-up-right-from-square{
+    transition: all 0.3s ease;
+}
+
+
+.card:hover  .video-count .fa-arrow-up-right-from-square{
+    transform: scale(1.2);
+    color:#c97e4d;
+    cursor: pointer;
 }
 .card h3{
     margin-bottom:0.5rem;
@@ -136,4 +183,8 @@ aside{
     margin-right:1rem;
     color:#f1f1f199;
     font-size:0.9rem;
+}
+
+.grayColor{
+    color:#f1f1f199;
 }
